--- a/BugTracker2/appsettings.json
+++ b/BugTracker2/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;",
-    "BugTracker2ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BugTracker2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BugTracker2ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BugTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
     
   }
 }
