--- a/BugTracker/appsettings.json
+++ b/BugTracker/appsettings.json
@@ -8,8 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;",
-    "BugTracker2ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BugTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
-    
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"    
   }
 }
