Got text file logging working

--- a/BugTracker/appsettings.json
+++ b/BugTracker/appsettings.json
@@ -6,8 +6,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Information",
+        "Microsoft": "Warning"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"    
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
   }
 }
